# mou-gui

./: README.md  pyproject.toml
.github/workflows/: publish.yml
mou/: __init__.py  main.py
mou/__pycache__/: hi.txt
mou_gui.egg-info/: PKG-INFO  SOURCES.txt
