[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mou-gui"
version = "0.1.0"
description = "MOU — Modern UI Toolkit"
authors = [{ name = "Yixuan Xu", email = "xuyixuan370@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/LightingDev/mou-gui"
